Fixed bugs with spacing/sizing

--- a/css/index.css
+++ b/css/index.css
@@ -378,7 +378,7 @@ body {
   }
 }
 .card {
-  flex-basis: 100%;
+  width: 100%;
   margin-top: 20px;
   height: auto;
   min-height: 300px;
@@ -465,6 +465,9 @@ body {
   width: 95vw;
   margin: 0 auto 50px;
 }
+.who_cards_card_botto {
+  padding-bottom: 0 !important;
+}
 @media (min-width: 768px) {
   .who_cards {
     display: flex;
@@ -478,10 +481,10 @@ body {
   background-size: contain;
 }
 .who_cards_card-2_bottom {
-  height: 110px;
+  height: 149px;
 }
 .who_cards_card-2_top h1 {
-  font-size: 2rem;
+  font-size: 1.3rem;
   color: #FFF;
 }
 .who_cards_card-3 {
