--- a/less/comps/cards.less
+++ b/less/comps/cards.less
@@ -6,7 +6,7 @@
 }
 
 .card {
-    flex-basis: 100%;
+    width: 100%;
     margin-top: 20px;
     height: auto;
     min-height: 300px;
