--- a/less/comps/who.less
+++ b/less/comps/who.less
@@ -3,6 +3,10 @@
     margin: 0 auto 50px;
 
     &_cards {
+        &_card_botto {
+            padding-bottom: 0 !important;
+        }
+        
         @media @tablet {
             .flex(@jc:space-between, @wrap: wrap);
         }
@@ -14,11 +18,11 @@
         }
         &_card-2 {
             &_bottom {
-                height: 110px;
+                height: 149px;
             }
             &_top {
                 h1 {
-                    font-size: 2rem;
+                    font-size: 1.3rem;
                     color: @white;
                 }
             }
